--- a/Aula118/Aula118.csproj
+++ b/Aula118/Aula118.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Entities\Worker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Messages.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
