--- a/ExerciciosCursoCSharp/ExerciciosCursoCSharp.csproj
+++ b/ExerciciosCursoCSharp/ExerciciosCursoCSharp.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExercicioAula71.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
