--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,14 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+  
+.vscode / *
+! .vscode / settings.json
+! .vscode / tasks.json
+! .vscode / launch.json
+! .vscode / extensions.json
+* .code-workspace
+
+# Histórico local para código do Visual Studio
+.history /
