--- a/.gitignore
+++ b/.gitignore
@@ -359,6 +359,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
