--- a/ExerciciosCursoC/ExerciciosCursoC.vcxproj
+++ b/ExerciciosCursoC/ExerciciosCursoC.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>Compilation</OutDir>
+    <OutDir>$(Configuration)\Compilation</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
