--- a/ExerciciosCursoCPP/ExerciciosCursoCPP.vcxproj.filters
+++ b/ExerciciosCursoCPP/ExerciciosCursoCPP.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Funcoes.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
