--- a/ExerciciosCursoCPP/ExerciciosCursoCPP.vcxproj
+++ b/ExerciciosCursoCPP/ExerciciosCursoCPP.vcxproj
@@ -142,6 +142,9 @@
   <ItemGroup>
     <ClCompile Include="ExerciciosCursoCPP.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Funcoes.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
